--- a/src/css/head-footer.css
+++ b/src/css/head-footer.css
@@ -130,6 +130,7 @@ header .navbar .user-info li > a {
 }
 footer {
   border-top: 1px solid #e6e6e6;
+  margin-top: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
