--- a/src/sass/head-footer.scss
+++ b/src/sass/head-footer.scss
@@ -162,6 +162,7 @@ header {
 
 footer {
     border-top: 1px solid #e6e6e6;
+    margin-top: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
 
