--- a/src/css/index-content.css
+++ b/src/css/index-content.css
@@ -187,6 +187,11 @@
   margin-bottom: 15px;
   border: 1px solid #e64620;
 }
+.right-content .user-module h2 {
+  margin-top: 0;
+  color: #ec5f3c;
+  text-align: center;
+}
 .right-content .user-module .user {
   overflow: hidden;
 }
