--- a/src/sass/index-content.scss
+++ b/src/sass/index-content.scss
@@ -246,6 +246,12 @@
         margin-bottom: 15px;
         border: 1px solid #e64620;
 
+        h2{
+            margin-top: 0;
+            color: #ec5f3c;
+            text-align: center;
+        }
+
         .user {
             overflow: hidden;
 
