--- a/src/css/head-footer.css
+++ b/src/css/head-footer.css
@@ -52,24 +52,24 @@ header .navbar .ul-nav > li > a {
   text-shadow: none;
   display: block;
 }
-header .navbar .user-info {
+header .navbar .user-info, header .navbar .login {
   float: right;
   margin-right: 10px;
 }
-header .navbar .user-info li {
+header .navbar .user-info li, header .navbar .login li {
   padding: 10px;
   line-height: 45px;
   float: left;
   list-style: none;
 }
-header .navbar .user-info li .notice {
+header .navbar .user-info li .notice, header .navbar .login li .notice {
   padding: 0;
   font-size: 14px;
 }
-header .navbar .user-info li #hover-info {
+header .navbar .user-info li #hover-info, header .navbar .login li #hover-info {
   cursor: pointer;
 }
-header .navbar .user-info li .hover-info {
+header .navbar .user-info li .hover-info, header .navbar .login li .hover-info {
   font-size: 14px;
   margin-left: -21px;
   margin-top: -1px;
@@ -81,27 +81,37 @@ header .navbar .user-info li .hover-info {
   border: 1px solid #e4e4e4;
   background-color: #fff;
 }
-header .navbar .user-info li .hover-info li {
+header .navbar .user-info li .hover-info li, header .navbar .login li .hover-info li {
   width: 100%;
   padding-top: 0px;
   padding-bottom: 0px;
   border-bottom: 1px solid #e4e4e4;
   cursor: pointer;
 }
-header .navbar .user-info li .hover-info li i {
+header .navbar .user-info li .hover-info li i, header .navbar .login li .hover-info li i {
   color: #cccccc;
 }
-header .navbar .user-info li .user-photo {
+header .navbar .user-info li .user-photo, header .navbar .login li .user-photo {
   padding: 0;
 }
-header .navbar .user-info li .user-photo img {
+header .navbar .user-info li .user-photo img, header .navbar .login li .user-photo img {
   border-radius: 15px;
 }
-header .navbar .user-info li > a {
+header .navbar .user-info li > a, header .navbar .login li > a {
   float: none;
   color: #000;
   text-decoration: none;
   text-shadow: none;
+}
+header .navbar .login a {
+  display: block;
+  padding: 2px 10px;
+  color: #fff !important;
+  border-radius: 5px;
+  background-color: #e64620;
+  line-height: 18px;
+  margin-top: 12px;
+  font-size: 12px;
 }
 
 @media (min-width: 1200px) {
