--- a/src/css/login.css
+++ b/src/css/login.css
@@ -5,6 +5,26 @@ body .wrapper {
   overflow: visible;
 }
 
+header {
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  background-color: #fafafa;
+  position: relative;
+}
+header .header-container {
+  position: relative;
+  width: 1100px;
+  margin: 0 auto;
+}
+header .header-container a {
+  color: #8f8c8f;
+  text-decoration: none;
+}
+header .header-container a:hover {
+  text-decoration: underline;
+}
+
 .login-box, .register-box {
   width: 300px;
   min-height: 300px;
@@ -63,6 +83,7 @@ body .wrapper {
   margin-bottom: 12px;
 }
 .login-box .panel form .code input, .register-box .panel form .code input {
+  width: 140px;
   height: 22px;
   padding: 9px 8px 9px 15px;
   border: 1px solid #c9c9c9;
