--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 html,
 body {
+  margin: 0;
+  padding: 0;
   height: 100%;
   background-color: #f5f5f5;
   font-family: "微软雅黑";
