--- a/src/sass/head-footer.scss
+++ b/src/sass/head-footer.scss
@@ -121,6 +121,22 @@ header {
                 }
             }
         }
+
+        .login {
+            @extend .user-info;
+
+            a {
+                display: block;
+                padding: 2px 10px;
+                color: #fff !important;
+                border-radius: 5px;
+                background-color: #e64620;
+                line-height: 18px;
+                margin-top: 12px;
+                font-size: 12px;
+                
+            }
+        }
     }
 }
 
