--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -6,6 +6,29 @@ body {
     }
 }
 
+header {
+    height: 30px;
+    line-height: 30px;
+    font-size: 12px;
+    background-color: #fafafa;
+    position: relative;
+
+    .header-container {
+        position: relative;
+        width: 1100px;
+        margin: 0 auto;
+
+        a {
+            color: #8f8c8f;
+            text-decoration: none;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
 
 .login-box {
     width: 300px;
@@ -77,6 +100,7 @@ body {
                 margin-bottom: 12px;
 
                 input {
+                    width: 140px;
                     height: 22px;
                     padding: 9px 8px 9px 15px;
                     border: 1px solid #c9c9c9;
@@ -161,6 +185,7 @@ body {
                 font-size: 12px;
                 color: #333;
                 right: 30px;
+
                 &:hover {
                     color: #2FB3FF;
                 }
